WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24257
WebKitCSSMatrix does not have a prototype property
https://bugs.webkit.org/show_bug.cgi?id=24257
Summary
WebKitCSSMatrix does not have a prototype property
Chris Marrin
Reported
2009-02-27 18:00:59 PST
Doing WebKitCSSMatrix.prototype returns undefined. This works for all the other native JS classes.
Attachments
Patch with test
(18.43 KB, patch)
2009-03-02 17:47 PST
,
Chris Marrin
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-03-02 12:47:14 PST
WebKitCSSMatrix and WebKitPoint need to be added to the list of global constructors in DOMWindow.idl.
Chris Marrin
Comment 2
2009-03-02 17:47:42 PST
Created
attachment 28209
[details]
Patch with test
Sam Weinig
Comment 3
2009-03-02 17:50:01 PST
Comment on
attachment 28209
[details]
Patch with test
> +++ WebCore/bindings/js/JSImageConstructor.cpp (working copy) > @@ -21,6 +21,7 @@ > #include "JSImageConstructor.h" > > #include "HTMLImageElement.h" > +#include "JSHTMLImageElement.h" > #include "HTMLNames.h" > #include "JSNode.h" > #include "ScriptExecutionContext.h"
These should be sorted. r=me
Chris Marrin
Comment 4
2009-03-03 10:51:20 PST
Sending LayoutTests/ChangeLog Adding LayoutTests/fast/dom/Window/custom-constructors-expected.txt Adding LayoutTests/fast/dom/Window/custom-constructors.html Sending LayoutTests/fast/dom/Window/window-properties-expected.txt Sending WebCore/ChangeLog Sending WebCore/bindings/js/JSAudioConstructor.cpp Sending WebCore/bindings/js/JSDOMWindowBase.cpp Sending WebCore/bindings/js/JSImageConstructor.cpp Sending WebCore/bindings/js/JSOptionConstructor.cpp Sending WebCore/bindings/js/JSWebKitCSSMatrixConstructor.cpp Sending WebCore/bindings/js/JSWebKitCSSMatrixConstructor.h Sending WebCore/bindings/js/JSWebKitPointConstructor.cpp Sending WebCore/bindings/js/JSWorkerConstructor.cpp Transmitting file data ............. Committed revision 41396.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug