        Reviewed by Sam Weinig.

https://bugs.webkit.org/show_bug.cgi?id=24257

        Added prototype properties for several classes with constructors that
        were missing them, including the one mentioned in the bug.



Canonical link: https://commits.webkit.org/33466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41396 268f45cc-cd09-0410-ab3c-d52691b4dbfc