WebCore/bindings/js/JSOptionConstructor.cpp
@@ -40,6 +40,7 @@ JSOptionConstructor::JSOptionConstructor(ExecState* exec, ScriptExecutionContext
     ASSERT(context->isDocument());
     m_document = static_cast<JSDocument*>(asObject(toJS(exec, static_cast<Document*>(context))));
 
+    putDirect(exec->propertyNames().prototype, JSHTMLOptionElementPrototype::self(exec), None);
     putDirect(exec->propertyNames().length, jsNumber(exec, 4), ReadOnly|DontDelete|DontEnum);
 }
 
