WebCore/bindings/js/JSWebKitPointConstructor.cpp
@@ -39,6 +39,7 @@ const ClassInfo JSWebKitPointConstructor::s_info = { "WebKitPointConstructor", 0
 JSWebKitPointConstructor::JSWebKitPointConstructor(ExecState* exec)
     : DOMObject(JSWebKitPointConstructor::createStructure(exec->lexicalGlobalObject()->objectPrototype()))
 {
+    putDirect(exec->propertyNames().prototype, JSWebKitPointPrototype::self(exec), None);
     putDirect(exec->propertyNames().length, jsNumber(exec, 2), ReadOnly|DontDelete|DontEnum);
 }
 
